--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,16 +3,16 @@ apply plugin: 'bintray-release'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile "com.android.support:recyclerview-v7:${androidSupportVersion}"
 }
 
 android {
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 23
     }
 
-    compileSdkVersion 22
+    compileSdkVersion 23
     buildToolsVersion "22.0.1"
 }
 
