--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 23
     buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.ataulm.rv"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -15,7 +15,8 @@ android {
 
 dependencies {
     compile project(":core")
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.android.support:support-v13:21.0.0'
-    compile 'com.android.support:recyclerview-v7:21.0.0'
+
+    compile "com.android.support:appcompat-v7:${androidSupportVersion}"
+    compile "com.android.support:support-v13:${androidSupportVersion}"
+    compile "com.android.support:recyclerview-v7:${androidSupportVersion}"
 }
