--- a/core/build.gradle
+++ b/core/build.gradle
@@ -13,7 +13,7 @@ android {
     }
 
     compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "${androidBuildToolsVersion}"
 }
 
 publish {
